<resources>
    <string name="app_name">qltv_duanmau</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phi_u_m_n">Phiếu mượn</string>
    <string name="th_lo_i_s_ch">Thể loại sách</string>
    <string name="th_nh_vi_n">Thành viên</string>
    <string name="qu_n_l_s_ch">Quản lý sách</string>
    <string name="th_ng_k">Thống Kê</string>
    <string name="th_ng_k_top_10_s_ch_m_n">Thống kê top 10 sách mượn</string>
    <string name="doanh_thu">Doanh Thu</string>
    <string name="ng_i_d_ng">Người dùng</string>
    <string name="i_m_t_kh_u">Đổi mật khẩu</string>
    <string name="ng_xu_t">Đăng Xuất</string>
</resources>